# IterativeRotationsAssignments

./: .gitignore  CMakeLists.txt  Makefile  README  README.md  cshda.f90  fpm.toml  ira_eq.f90  ira_routines.f90  pixi.toml  pyproject.toml  python_program.py  read_typ.f90  run_single.sh  setup.py  version.txt  version_history.md
.github/workflows/: deploy_page.yml
ArbAlign/: ArbAlign.py
IRA/: LICENSE.txt  Makefile  README  README.md  c_program.c  compile.sh  cshda.f90  f90_program.f90  ira_eq.f90  ira_general.f90  ira_interf.pyf  ira_mod.py  ira_noneq.f90  ira_routines.f90  library_ira.f90  python_program.py  read_typ.f90  set_candidate.f90  sorting_module.f90
IRA/example_inputs/: f90_input1.xyz  f90_input2.xyz  s2.xyz
benchmark_test/: README.md  run_many.sh  run_single.sh
benchmark_test/ArbAlign/: PrinCoords.py  README  original_ref.bib
benchmark_test/convert_xyz2FO/: README  xyz2FO.f90
benchmark_test/data/: README
benchmark_test/randomize/: randomize.f90  read_typ.f90
convert_xyz2FO/: compile.sh
docs/: Doxyfile.in  compilation.rst  conf.py  index.rst  intro.rst
docs/howto/: howto.rst  ira_howto.rst  sofi_howto.rst
docs/interf/: interf_ira.rst  interf_sofi.rst  py_interf.rst
docs/src/: c_wrappers.rst  cshda.rst  ira.rst  refs.rst  sofi.rst
examples/IRA/: Makefile  README.md  c_program.c  f90_program.f90  python_program.py
examples/IRA/example_inputs/: input3.xyz  s1.xyz
examples/SOFI/: Makefile  README.md  c_program.c  f90_program.f90  python_program.py
examples/SOFI/ex_D6h_subgroup/: test.py
examples/SOFI/ex_simplePG/: compile.sh  simple_pg.f90
examples/SOFI/example_inputs/: C540-Ih.xyz  Ci.xyz  Cs.xyz  D6.xyz  O.xyz  S10.xyz  S4.xyz  S6.xyz  S6_D3d.xyz  S8.xyz  T.xyz  Th.xyz  c137v.xyz  c18.xyz  c18h.xyz  c18v.xyz  c28v.xyz  c66v.xyz  d12.xyz  d12d.xyz  d12h.xyz
fastoverlap/: README  original_ref.bib  sphericalAlignment_modread.py
interface/: __init__.py  ira_mod.py  iralib_interf.h
lap_local/: lap.f
randomize/: README  compile.sh  randomize.f90
src/: CMakeLists.txt  Makefile  README.md  cshda.f90  err_module.f90  ira_precision.f90  ira_routines.f90  library_ira.f90  library_sofi.f90  set_candidate.f90  sofi_routines.f90  sofi_tools.f90  sorting_module.f90  timer.f90  version.f90
tests/: CMakeLists.txt  dbg.f90  main.c  main.cpp  main.f90
