[build-system]
requires = ["scikit-build-core"]
build-backend = "scikit_build_core.build"

[project]
name = "ira_mod"
dynamic = ["version"]
description = "Algorithms for Iterative Rotations and Assignments (IRA); Symmetry Operations FInder (SOFI); and Constrained Shortest Distance Assignment (CShDA)."
authors = [{name = "MAMMASMIAS Consortium"}]
urls = {Homepage = "https://github.com/mammasmias/IterativeRotationsAssignments"}
license = {text = "GPL-3.0-or-later OR Apache-2.0"}
dependencies = ["numpy>=2.2.6"]

[tool.scikit-build]
cmake.version = ">=3.5"
cmake.args = [ "-DBUILD_SHARED_LIBS=ON" ]
wheel.packages = []  # Python files are installed via cmake install()

[tool.scikit-build.metadata.version]
provider = "scikit_build_core.metadata.regex"
input = "version.txt"
regex = "^(?P<value>\\d+\\.\\d+\\.\\d+)"

